--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-nav></app-nav>
-<div class="container" style="margin-top: 100px"></div>
-<div *ngFor="let user of users">
-  <h2>{{ user.id }}</h2>
-  <p>{{ user.userName }}</p>
+<div class="container" style="margin-top: 100px">
+  <app-home></app-home>
 </div>
