--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Dating App</a>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <ul *ngIf="currentUser$ | async" class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a class="nav-link" aria-current="page" href="#">Matches</a>
       </li>
@@ -11,16 +11,44 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Edit profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" (click)="logout()">Logout</a>
+      </li>
     </ul>
+
+    <div class="dropdown" *ngIf="currentUser$ | async">
+      <a class="dropdown-toggle text-light">Welcome user</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item">Edit profile</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div>
+
     <form
+      *ngIf="(currentUser$ | async) === null"
       #loginForm="ngForm"
       class="d-flex"
       role="search"
       (ngSubmit)="login()"
       autocomplete="off"
     >
-      <input name="username" a-ngMo class="form-control me-2" type="text" placeholder="Username" />
-      <input class="form-control me-2" type="password" placeholder="Password" />
+      <input
+        name="username"
+        [(ngModel)]="model.username"
+        class="form-control me-2"
+        type="text"
+        placeholder="Username"
+      />
+      <input
+        name="password"
+        [(ngModel)]="model.password"
+        class="form-control me-2"
+        type="password"
+        placeholder="Password"
+      />
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
   </div>
