--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,30 +1,38 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Dating App</a>
-    <ul *ngIf="currentUser$ | async" class="navbar-nav me-auto mb-2 mb-md-0">
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Edit profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" (click)="logout()">Logout</a>
-      </li>
+    <a class="navbar-brand" routerLink="/">Dating App</a>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ng-container *ngIf="currentUser$ | async">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLink="/members"
+            routerLinkActive="active"
+            >Matches</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Lists</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Messages</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Edit profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="logout()">Logout</a>
+        </li>
+      </ng-container>
     </ul>
 
-    <div class="dropdown" *ngIf="currentUser$ | async">
-      <a class="dropdown-toggle text-light">Welcome user</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item">Edit profile</a>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
-      </div>
+    <div class="dropdown" *ngIf="currentUser$ | async as user">
+      <a class="text-light">Welcome {{ user.username | titlecase }}</a>
     </div>
 
     <form
@@ -49,7 +57,7 @@
         type="password"
         placeholder="Password"
       />
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
   </div>
 </nav>
