--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -29,6 +29,9 @@
           <a class="nav-link" href="#" (click)="logout()">Logout</a>
         </li>
       </ng-container>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/errors">Errors</a>
+      </li>
     </ul>
 
     <div class="dropdown" *ngIf="currentUser$ | async as user">
