--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Edit profile</a>
+          <a class="nav-link" routerLink="/member/edit">Edit profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" (click)="logout()">Logout</a>
