--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,11 +3,9 @@
     <h1>Your profile</h1>
   </div>
   <div class="col-8">
-    <div class="alert-info">
-      <p>
-        <strong>Information: </strong>You have made changes. Any unsaved changes
-        will be lost
-      </p>
+    <div class="alert-info" *ngIf="editForm.dirty">
+      <strong>Information: </strong>You have made changes. Any unsaved changes
+      will be lost
     </div>
   </div>
   <div class="col-4">
@@ -36,27 +34,36 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success btn-block">Save changes</button>
+        <button
+          [disabled]="!editForm.dirty"
+          form="editForm"
+          class="btn btn-success btn-block"
+        >
+          Save changes
+        </button>
       </div>
     </div>
   </div>
   <div class="col-8">
     <div class="about">
-      <form>
+      <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
         <h4>Description</h4>
         <textarea
+          class="form-control"
           [(ngModel)]="member.introduction"
           name="introduction"
           rows="6"
         ></textarea>
         <h4 class="mt-2">Looking for</h4>
         <textarea
+          class="form-control"
           [(ngModel)]="member.lookingFor"
           name="lookingFor"
           rows="6"
         ></textarea>
         <h4 class="mt-2">Interests</h4>
         <textarea
+          class="form-control"
           [(ngModel)]="member.interests"
           name="interests"
           rows="6"
