Ho Nhat Hy deep trai

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -88,7 +88,7 @@
       </form>
     </div>
     <div class="edit-photo">
-      <p>Photo edit will go here</p>
+      <app-photo-editor [member]="member"></app-photo-editor>
     </div>
   </div>
 </div>
